# YKBFirmware

./: .dtsfmtrc.toml  .dtsformat  .gitignore  CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md  west-commands.yml  west.yml
Kconfig.ykb/: Kconfig  Kconfig.split
app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  debug.conf  prj.conf  sysbuild.cmake  sysbuild.conf
app/conf/: debug.conf
app/src/: bt.c  bt.h  main.c
app/sysbuild/: CMakeLists.txt  mcuboot.conf
cmake/: ykb_board_assets.cmake
cpunet_mpsl/: CMakeLists.txt  prj.conf
cpunet_mpsl/src/: bt_hci.c  bt_hci.h  hci_rpmsg_module.c  hci_rpmsg_module.h  main.c
drivers/: CMakeLists.txt  Kconfig
drivers/charger/: CMakeLists.txt  Kconfig  Kconfig.bq25185
drivers/fuel_gauge/: CMakeLists.txt  Kconfig  Kconfig.ykb_fuel_gauge_voltage_divider
drivers/kb_handler/: CMakeLists.txt  Kconfig
drivers/kscan/: CMakeLists.txt  Kconfig  Kconfig.channels  Kconfig.enables  Kconfig.muxes  iterables.ld
drivers/mux/: CMakeLists.txt  Kconfig  Kconfig.gpio
drivers/splitlink/: CMakeLists.txt  Kconfig  Kconfig.ykb_esb
include/drivers/: kb_handler.h  kscan.h  mux.h  splitlink.h
include/lib/: bt_connect.h  esb_ble_mpsl.h  features.h  kb_settings.h  usb_connect.h  vendor_hid_protocol.h  ykb_backlight.h  ykb_battsense.h  ykb_esb.h  ykb_protocol.h  ykb_timeslot.h
lib/: CMakeLists.txt  Kconfig
nrf5340_cpunet_mpsl/: CMakeLists.txt  prj.conf
scripts/: gen_kb_handler_layout.py  gen_splitlink_address.py  gen_ykb_backlight_resources.py
subsys/: CMakeLists.txt  Kconfig
ykb-config/: Kconfig  Kconfig.split
(+223 files in other folders)
